--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -23,10 +23,12 @@ jobs:
       - name: Set path of xml file
         id: mule_xml
         run: |
+          temp=''
           for file in ${{ steps.changed-markdown-files.outputs.all_changed_files }}; do
             echo "MULE_FILE=$file" >> $GITHUB_ENV
+            temp=$file
           done
-          cat $MULE_FILE
+          cat $temp
 
       - name: Extract Application Version ID from Mule config
         uses: tmelliottjr/extract-regex-action@v1.4.0
