--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -3,8 +3,8 @@ on:
   pull_request: 
     branches: [ master ]
 
-env:
-  MULE_FILE: 'none'
+# env:
+#   MULE_FILE: 'none'
 
 jobs:
   Pase_XML:
@@ -20,15 +20,13 @@ jobs:
           files: | 
             **.xml
 
-      - name: Set path of xml file
+      - name: Read Mule XML content
         id: mule_xml
         run: |
-          temp=''
           for file in ${{ steps.changed-markdown-files.outputs.all_changed_files }}; do
-            echo "MULE_FILE=$file" >> $GITHUB_ENV
-            temp=$file
+            # echo "MULE_FILE=$file" >> $GITHUB_ENV
+            echo "xml=$(echo $file)" >> "$GITHUB_OUTPUT"
           done
-          cat $temp
 
       - name: Extract Application Version ID from Mule config
         uses: tmelliottjr/extract-regex-action@v1.4.0
@@ -36,7 +34,7 @@ jobs:
         with:
           regex: '(?<=name=\"epApplicationVersionId\" value=\")(.*)(?=\")' 
           flags: "gm"
-          input: ${{ steps.mule_xml.outputs }}
+          input: ${{steps.mule_xml.outputs.xml}}
 
       # - name: Extract EP Applicatin Version ID from XML
       #   id: epApplicationVersionId
