--- a/.github/workflows/promote_and_provision_mule.yml
+++ b/.github/workflows/promote_and_provision_mule.yml
@@ -1,6 +1,6 @@
 name: Promote and Provision Application Version ID from mule xml
 on:
-  push: 
+  pull_request: 
     branches: [ master ]
 
 env: 
