--- a/.github/workflows/promote_and_provision_mule.yml
+++ b/.github/workflows/promote_and_provision_mule.yml
@@ -10,7 +10,7 @@ jobs:
   promote_provision:
     runs-on: ubuntu-latest
     steps:
-      - name: Checkout Codelabs repo
+      - name: Checkout repo
         uses: actions/checkout@v2
         
       - name: Get all changed markdown files
