--- a/.github/workflows/promote_and_provision_mule.yml
+++ b/.github/workflows/promote_and_provision_mule.yml
@@ -1,3 +1,18 @@
+# This workflow will be triggered on every commit merge to the defined branch
+# Note : if an XML file is not present, the job is canceled
+
+# This workflow uses actions that are not certified by GitHub.
+# They are provided by a third-party and are governed by
+# separate terms of service, privacy policy, and support
+# documentation.
+
+# To get started, configure the following in your repos secrets https://docs.github.com/en/actions/security-guides/encrypted-secrets
+# SOLACE_CLOUD_TOKEN: Solace Cloud Token
+# TF_VAR_solace_url: SEMP URL for target broker provisioning
+# TF_VAR_semp_username: SEMP username for target broker provisioning
+# TF_VAR_semp_password: SEMP password for target broker provisioning
+# SOL_MSG_VPN: Solace VPN
+
 name: Promote and Provision Application Version ID from mule xml
 on:
   pull_request: 
@@ -19,6 +34,9 @@ jobs:
         with:
           files: | 
             src/**.xml
+      
+      - name: Echo changed files
+        run: echo ${{steps.changed-markdown-files.outputs.all_changed_files}}
 
       - name: Read Mule XML content
         id: mule_xml
