--- a/.github/workflows/plan_mule.yml
+++ b/.github/workflows/plan_mule.yml
@@ -78,7 +78,7 @@ jobs:
       - uses: actions/github-script@v6
         if: github.event_name == 'pull_request'
         env:
-          PLAN: "${{ steps.plan.outputs.stdout }}"
+          PLAN: "${{ steps.plan.outputs }}"
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
