--- a/.github/workflows/pr.yml
+++ b/.github/workflows/pr.yml
@@ -41,10 +41,12 @@ jobs:
         id: mule_xml
         run: |
           for file in ${{ steps.changed-markdown-files.outputs.all_changed_files }}; do
-            echo $file
-            echo 'xml<<EOF' >> $GITHUB_OUTPUT
-            echo $(cat $file) >> $GITHUB_OUTPUT
-            echo 'EOF' >> $GITHUB_OUTPUT
+            if [[ ${file} != *"Global"* ]];then
+              echo "Reading file: $file"
+              echo 'xml<<EOF' >> $GITHUB_OUTPUT
+              echo $(cat $file) >> $GITHUB_OUTPUT
+              echo 'EOF' >> $GITHUB_OUTPUT
+            fi
           done
       
       - name: Extract Application Version ID from Mule config
