--- a/.github/workflows/diff-ep.yml
+++ b/.github/workflows/diff-ep.yml
@@ -15,7 +15,7 @@ jobs:
         with:
           application_version_id: c6e5koz6t7v
           event_broker_id: 5c38mdgufxr
-          solace_cloud_token: ${{ secrets.SOLACE_CLOUD_TOKEN }}
+          solace_cloud_token: ${{ secrets.SOLACE_CLOUD_TEMP_TOKEN }}
       
       - name: Create PR comment
         uses: actions/github-script@v5
