--- a/.github/workflows/config_push.yml
+++ b/.github/workflows/config_push.yml
@@ -1,21 +1,25 @@
-name: Preview Appication Deployment Plan
+name: Config Push
 
 # Trigger on pull request only
 on:
   pull_request:
     branches:
       - main
+
+
+#  add env variable
 env:
-  APPLICATION_VERSION_ID: puu886to6kd
-  EVENT_MESH_NAME: us-central-solace-Prod
+  APPLICATION_VERSION_ID: "puu886to6kd"
+  EVENT_MESH_NAME: "us-central-solace-Prod"
   PREVIEW_ONLY: TRUE
 
 jobs:
-  preview:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - name: Deploy Application Version ID
-        uses: SolaceDev/solace-ep-config-push
+        uses: SolaceDev/solace-ep-provisioning-github-action
         with:
           SOLACE_CLOUD_TOKEN: ${{ secrets.SOLACE_CLOUD_TOKEN }}
           APPLICATION_VERSION_ID: ${{ env.APPLICATION_VERSION_ID }}
