--- a/.github/workflows/config_push_preview.yml
+++ b/.github/workflows/config_push_preview.yml
@@ -12,7 +12,7 @@ jobs:
   plan:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - uses: SolaceDev/solace-ep-config-push
       # - name: Preview Application Version Deployment Plan
       #   uses: SolaceDev/solace-ep-config-push
       #   with:
