--- a/.github/workflows/config_push_preview.yml
+++ b/.github/workflows/config_push_preview.yml
@@ -13,7 +13,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Preview Application Version Deployment Plan
-        uses: SolaceDev/solace-ep-config-push@v0.0.5
+        uses: SolaceDev/solace-ep-config-push
         with:
           SOLACE_CLOUD_TOKEN: ${{ secrets.SOLACE_CLOUD_TOKEN }}
           APPLICATION_VERSION_ID: ${{ env.APPLICATION_VERSION_ID }}
