--- a/.github/workflows/config_push_preview.yml
+++ b/.github/workflows/config_push_preview.yml
@@ -32,15 +32,8 @@ jobs:
         with:
           github-token: ${{ secrets.GITHUB_TOKEN }}
           script: |
-            // 1. Retrieve existing bot comments for the PR
-            const { data: comments } = await github.rest.issues.listComments({
-              owner: context.repo.owner,
-              repo: context.repo.repo,
-              issue_number: context.issue.number,
-            })
-
-            // 2. Prepare format of the comment
-            const output = `#### Applicstion Deployment Plan 📖\`${{ steps.plan.outcome }}\`
+            // 1. Prepare format of the comment
+            const output = `#### Application Deployment Plan 📖\`${{ steps.plan.outcome }}\`
       
             <details><summary>Show Plan</summary>
       
@@ -51,7 +44,8 @@ jobs:
             </details>
       
             *Pusher: @${{ github.actor }}, Action: \`${{ github.event_name }}\` *`;
-      
+            
+            // 2. Create PR comment with the deployment plan
             github.rest.issues.createComment({
               issue_number: context.issue.number,
               owner: context.repo.owner,
