--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -15,7 +15,7 @@ jobs:
         uses: montudor/action-zip@v1
         with:
           args: | 
-            zip -qq -r sig.zip images/email-sig-tamimi.png
+            zip -qq -r sig.zip images/email-sig-tamimi.png \
             zip -qq -r scripts.zip init.sh lychee.toml
       
       # This step lists all files in dir
