--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -4,7 +4,7 @@ on:
   pull_request:
 
 jobs:
-  build:
+  zip:
     runs-on: ubuntu-latest
 
     steps:
@@ -15,8 +15,7 @@ jobs:
         uses: montudor/action-zip@v1
         with:
           args: | 
-            zip -qq -r sig.zip images/email-sig-tamimi.png \
-            zip -qq -r scripts.zip init.sh lychee.toml
+            zip -qq -r sig.zip images/email-sig-tamimi.png; zip -qq -r scripts.zip init.sh lychee.toml
       
       # This step lists all files in dir
       - name: List files
