--- a/.github/workflows/zip.yml
+++ b/.github/workflows/zip.yml
@@ -29,4 +29,4 @@ jobs:
       - name: Prepare archive
         uses: softprops/action-gh-release@v1
         with:
-          files: release/*
+          files: releases/*
