--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -38,11 +38,13 @@ jobs:
 
       - name: Prepare stm archives for different targets
         run: |
-          zip -qq -r release/stm-macos-v${{ steps.package-version.outputs.current-version}}.zip release/ -i stm-macos
-          zip -qq -r release/stm-linux-v${{ steps.package-version.outputs.current-version}}.zip release/ -i stm-linux
-          zip -qq -r release/stm-alpine-v${{ steps.package-version.outputs.current-version}}.zip release/ -i stm-alpine
-          zip -qq -r release/stm-win-v${{ steps.package-version.outputs.current-version}}.zip release/ -i stm-win.exe
-          rm release/stm-macos release/stm-linux release/stm-alpine release/stm-win.exe
+          cd release
+          zip -qq -r stm-macos-v${{ steps.package-version.outputs.current-version}}.zip . -i stm-macos
+          zip -qq -r stm-linux-v${{ steps.package-version.outputs.current-version}}.zip . -i stm-linux
+          zip -qq -r stm-alpine-v${{ steps.package-version.outputs.current-version}}.zip . -i stm-alpine
+          zip -qq -r stm-win-v${{ steps.package-version.outputs.current-version}}.zip . -i stm-win.exe
+          rm stm-macos stm-linux stm-alpine stm-win.exe
+          cd ..
 
       - name: Upload MacOs Artifacts
         uses: actions/upload-artifact@v4
