--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -69,24 +69,30 @@ jobs:
         with:
           name: stm-win-v${{ steps.package-version.outputs.current-version}}
           path: ./release/stm-win-v${{ steps.package-version.outputs.current-version}}.zip
-
+      
   release:
-    name: Create GitHub Release
+    name: Release
     runs-on: ubuntu-latest
     needs: build
     steps:
+    
+      - name: Checkout with Submodules
+        uses: actions/checkout@v3
+        with:
+          submodules: true
+
       - name: Download All Artifacts
         uses: actions/download-artifact@v4
         with:
-          path: release
+          path: artifacts
           merge-multiple: true
 
       - run: ls -la 
 
-      - name: Release
+      - name: Publish artifacts to github
         uses: softprops/action-gh-release@v1
         with:
-          files: release/*
+          files: artifacts/*
 
       - name: Update Homebrew
         run: ./scripts/update_homebrew.sh
