--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -96,7 +96,7 @@ jobs:
         uses: martinbeentjes/npm-get-version-action@v1.3.1
 
       - name: Update Homebrew
-        run: ./scripts/update_homebrew.sh
+        run: ./scripts/update_homebrew.sh ${{ steps.package-version.outputs.current-version}}
 
       # - name: Update APT Repository
       #   run: ./scripts/update_apt.sh
