--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -5,8 +5,8 @@ on:
      - 'v*.*.*'  # Matches version tags like v1.0.0
 
 jobs:
-  build:
-    name: Build and Package CLI
+  release:
+    name: Build and Release
     runs-on: ubuntu-latest
     steps:
       - name: Checkout with Submodules
@@ -42,58 +42,11 @@ jobs:
           zip -qq -r stm-win-v${{ steps.package-version.outputs.current-version}}.zip . -i stm-win.exe
           rm stm-macos stm-linux stm-alpine stm-win.exe
           cd ..
-
-      - name: Upload MacOs Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: stm-macos-v${{ steps.package-version.outputs.current-version}}
-          path: ./release/stm-macos-v${{ steps.package-version.outputs.current-version}}.zip
       
-      - name: Upload Linux Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: stm-linux-v${{ steps.package-version.outputs.current-version}}
-          path: ./release/stm-linux-v${{ steps.package-version.outputs.current-version}}.zip
-        
-      - name: Upload Alpine Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: stm-alpine-v${{ steps.package-version.outputs.current-version}}
-          path: ./release/stm-alpine-v${{ steps.package-version.outputs.current-version}}.zip
-      
-      - name: Upload Windows Artifacts
-        uses: actions/upload-artifact@v4
-        with:
-          name: stm-win-v${{ steps.package-version.outputs.current-version}}
-          path: ./release/stm-win-v${{ steps.package-version.outputs.current-version}}.zip
-      
-  release:
-    name: Release
-    runs-on: ubuntu-latest
-    needs: build
-    steps:
-    
-      - name: Checkout with Submodules
-        uses: actions/checkout@v3
-        with:
-          submodules: true
-
-      - name: Download All Artifacts
-        uses: actions/download-artifact@v4
-        with:
-          path: artifacts
-          merge-multiple: true
-
-      - run: ls -la 
-
       - name: Publish artifacts to github
         uses: softprops/action-gh-release@v1
         with:
-          files: artifacts/*
-
-      - name: get-npm-version
-        id: package-version
-        uses: martinbeentjes/npm-get-version-action@v1.3.1
+          files: release/*
 
       - name: Update Homebrew
         run: ./scripts/update_homebrew.sh ${{ steps.package-version.outputs.current-version}}
