--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -48,7 +48,9 @@ jobs:
         with:
           files: release/*
 
-      - name: Update Homebrew
+      - run: ls -la release
+      
+      - name: Update Homebrew 
         run: ./scripts/update_homebrew.sh ${{ steps.package-version.outputs.current-version}}
 
       # - name: Update APT Repository
