--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -40,7 +40,6 @@ jobs:
           zip -qq -r stm-linux-v${{ steps.package-version.outputs.current-version}}.zip . -i stm-linux
           zip -qq -r stm-alpine-v${{ steps.package-version.outputs.current-version}}.zip . -i stm-alpine
           zip -qq -r stm-win-v${{ steps.package-version.outputs.current-version}}.zip . -i stm-win.exe
-          rm stm-macos stm-linux stm-alpine stm-win.exe
           cd ..
 
       - name: Update Homebrew 
@@ -48,9 +47,31 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.SOLLYBOT_GITHUB_PAT }}
 
+      - name: Generate .deb package
+        run: |
+          mkdir -p stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
+          cd stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
+          mkdir -p usr/bin
+          cp release/stm-linux/stm-linux usr/bin/.
+          mkdir -p DEBIAN
+          echo "Package: stm
+            Version: ${{ steps.package-version.outputs.current-version}}
+            Maintainer: SolaceCommunity <community@solace.dev>
+            Depends: libc6
+            Section: utils
+            Architecture: amd64
+            Homepage: http://solace.dev
+            Description: This is a command line tool to help you get started with Solace PubSub+ Event Broker" \
+          > DEBIAN/control
+          cd ../
+          dpkg --build stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
+          
+          ## TEST
+          dpkg --contents stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
+          dpkg --info stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
 
-      # - name: Update APT Repository
-      #   run: ./scripts/update_apt.sh
+      - name: Update APT Repository
+        run: ./scripts/update_apt.sh ${{ steps.package-version.outputs.current-version}}
 
       # - name: Update Chocolatey
       #   run: ./scripts/update_chocolatey.sh
