--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -20,14 +20,14 @@ jobs:
           node-version: 18.x
           registry-url: "https://registry.npmjs.org"
 
-      - name: Install Dependencies
-        run: yarn install
+      # - name: Install Dependencies
+      #   run: yarn install
 
-      - name: Build
-        run: yarn run build
+      # - name: Build
+      #   run: yarn run build
         
-      - name: Package
-        run: yarn run package
+      # - name: Package
+      #   run: yarn run package
 
       - name: get-npm-version
         id: package-version
@@ -65,6 +65,8 @@ jobs:
           > DEBIAN/control
           cd ../
           pwd
+          ls -lR stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
+          cat stm-linux_${{ steps.package-version.outputs.current-version}}_amd64/DEBIAN/control
           dpkg --build stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
 
           ## TEST
