--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -65,9 +65,11 @@ jobs:
           > DEBIAN/control
           cd ../
           pwd
-          ls -lR stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
+          ls -R stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
+          ls -la stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
+
           cat stm-linux_${{ steps.package-version.outputs.current-version}}_amd64/DEBIAN/control
-          dpkg --build ./stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
+          dpkg --build -v ./stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
 
           ## TEST
           dpkg --contents stm-linux_${{ steps.package-version.outputs.current-version}}_amd64
